custom-exporter.yaml
#---------------------------------------Custom Exporter-----------------#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sample-exporter
spec:
  replicas: 1 
  template:
    metadata:
      labels:
        app: sample-exporter
    spec:
      containers:
      - name: sample-exporter
        image: mayurhingnekar/java-exporter:latest     # update metrics via http://svc/updatemetrics?queued_req=6 and get metrices via http://cs-svc/metrics
        ports:
        - name: web
          containerPort: 7777
---
#---------------------------------------Custom Exporter svc----------------#
kind: Service
apiVersion: v1
metadata:
  name: sample-exporter
  labels:
    app: sample-exporter
spec:
  selector:
    app: sample-exporter
  ports:
  - name: web
    port: 7777
