sample-app.yaml
#------------------------http server as sample app-----------------------#
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sampleapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sampleapp
    spec:
      containers:
      - name: sampleapp-ctr
        image: httpd:latest
        ports:
        - name: web
          containerPort: 80
---
#------------------------svc for sample app-----------------------#
kind: Service
apiVersion: v1
metadata:
  labels:
    app: sampleapp
  name: sampleapp-svc
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    name: http
  selector:
    app: sampleapp‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍‍
